--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,36 +31,16 @@ ul {
     margin: 0; 
     padding: 0;
 }
+.input-task {
+    padding: 5px;
+}
 .main {
     display: flex;
     margin: 50px;
 }
-/* モーダル コンテンツエリア */
-.modal {
-    display: none;
-    width: 500px;
-    height: 300px;
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff;
-    color: #666666;
-    position: fixed;
-    z-index: 2;
-}
-    /* モーダル 背景エリア */
-.modal-bg {
-    display: none;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    position: fixed;
-    top: 0;
-    left:0 ;
-    z-index: 1;
-}
 
 .task {
-    animation: fadeIn 2s ease 0s 1 normal;
+    animation: fadeIn 1s ease 0s 1 normal;
     font-size: 15px;
     width: 500px;
     height: 200px;
