--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ ul {
     padding: 5px;
     border: solid 2px #5b8bd0;
 }
+.input-task-main {
+    padding: 5px;
+    border: solid 2px #5b8bd0;
+}
 
 .input-limit {
     padding: 5px;
