--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/css/ress.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/iziModal.min.css">
+    <link rel="stylesheet" href="static/css/ress.css">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/iziModal.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers">
     <title>Document</title>
 </head>
@@ -75,7 +75,7 @@
             
         <aside class="right-bar">
             <button class="open-options button">
-                <img src="assets/images/plus3.png" alt="Icon-Plus">
+                <img src="static/images/plus3.png" alt="Icon-Plus">
             </button>
         </aside>
      <!-- wapper --></div>
@@ -83,8 +83,8 @@
     <footer class="foo-info"></footer>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
-    <script src="assets/js/iziModal.min.js" type="text/javascript"></script>
-    <script src="assets/js/task.js"></script>
+    <script src="static/js/iziModal.min.js" type="text/javascript"></script>
+    <script src="static/js/task.js"></script>
 </body>
 
 </html>
