--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="static/js/iziModal.min.js" type="text/javascript"></script>
+    <script src="static/js/config.js"></script>
     <script src="static/js/task.js"></script>
 </body>
 
